# onboardings

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
config/: logging.py  settings.py
scripts/: authorize_google.py
src/clients/: gmail.py  google_auth.py  google_drive.py  google_sheets.py  holded.py  hubspot.py  slack.py
src/models/: deal.py  enums.py  onboarding.py  sheets.py
src/persistence/: repository.py  schema.sql
src/pipeline/: engine.py  registry.py
src/scheduler/: polling_job.py
src/services/: deal_detector.py  onboarding_manager.py  service_mapper.py
src/steps/: base.py  create_drive_folder.py  create_holded_contact.py  notify_slack.py  send_email.py
tests/unit/: test_deal_detector.py  test_deal_parsing.py  test_gmail_client.py  test_google_drive_client.py  test_holded_client.py  test_hubspot_client.py  test_pipeline.py  test_scheduler.py  test_service_mapper.py  test_sheets_parsing.py  test_slack_client.py  test_steps.py
